--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <main class="main">
         <header class="header">
             <a href="#" class="logo">Permit Prep Quiz</a>
-            <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
-            </nav>
         </header>
         <div class="container">
             <section class="quizsec">
@@ -48,6 +42,16 @@
                 </div>
                 <div class="result-box">
                     <h2>Quiz Result</h2>
+                    <div class="percentage-container">
+                    <div class="circular-progress">
+                    <span class="progress-value">0%</span>
+                    </div>
+                    <span class="score-text">Your score 0 out of 15</span>
+                    </div>
+                <div class="buttons">
+                    <button class="tryagain-btn">Try again</button>
+                    <button class="home-btn">Exit</button>
+                </div>
                 </div>
             </section>
             <section class="Home">
